# football-rank

./: README.md  app.py  football_rank.py  load_data.py  pyproject.toml
