[tool.poetry]
name = "football"
version = "0.1.0"
description = ""
authors = ["Justin Pyron <justinpyron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^2.0.3"
numpy = "^1.25.1"
beautifulsoup4 = "^4.12.2"
networkx = "^3.1"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
jupyterlab = "^4.0.2"
ipykernel = "^6.24.0"
streamlit = "^1.24.1"
click = "^8.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
