[tool.poetry]
name = "football-rank"
version = "0.1.0"
description = ""
authors = ["Justin Pyron <justinpyron@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.0.3"
numpy = "^1.25.1"
beautifulsoup4 = "^4.12.2"
matplotlib = "^3.7.2"
jupyterlab = "^4.0.2"
streamlit = "^1.24.1"
click = "^8.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
